# central_server_app_foundation

./: CLAUDE.md  README.md  pyproject.toml
central_server_app_foundation/: __init__.py  version.py
central_server_app_foundation/auth/: __init__.py  user_store.py
central_server_app_foundation/auth_ui/: blueprint.py
central_server_app_foundation/contract/: __init__.py  cli.py
central_server_app_foundation/design/: __init__.py  blueprint.py  icons.py
central_server_app_foundation/design/static/: chassis.js  pill-toolbar.css  style.css
central_server_app_foundation/i18n/: __init__.py  babel.cfg  babel.py
central_server_app_foundation/settings/: __init__.py  store.py
central_server_app_foundation/settings_ui/: __init__.py  blueprint.py  sections.py
central_server_app_foundation/settings_ui/static/: settings.css
central_server_app_foundation/wiki/: __init__.py  markdown.py  store.py
conter_app_base/: __init__.py
conter_app_base/auth/: __init__.py  user_store.py
conter_app_base/auth_ui/: __init__.py  blueprint.py
conter_app_base/contract/: __init__.py  cli.py  data_paths.py  health.py
conter_app_base/design/: __init__.py  blueprint.py  sidebar.py
conter_app_base/design/static/: chassis.js  pill-toolbar.js
conter_app_base/i18n/: __init__.py  babel.py
conter_app_base/i18n/translations/: messages.pot
conter_app_base/settings/: __init__.py
conter_app_base/settings_ui/: __init__.py  blueprint.py
conter_app_base/wiki/: __init__.py  store.py  utils.py
docs/design_language/: 01-philosophy.md  02-theme-tokens.md  03-typography.md  04-layout.md  05-colors.md  06-components.md  07-forms.md  08-interaction.md  09-mobile.md  10-a11y.md  11-anti-patterns.md  README.md
docs/starter-kit/: 00-checklist.md  01-flask-factory.md  02-sqlite-service.md  03-dual-runtime.md  04-pyinstaller-spec.md  05-github-actions.md  06-i18n-babel.md  07-testing-conftest.md  08-auth-bootstrap.md  09-cache-pattern.md  10-claude-context.md  README.md
template_app/: app.py  routes.py  run.py
template_app/static/: style.css
tests/: test_auth.py  test_auth_ui.py  test_cli.py  test_data_paths.py  test_design.py  test_health_blueprint.py  test_i18n.py  test_settings.py  test_settings_ui.py  test_version.py  test_wiki.py
(+27 files in other folders)
