[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conter-app-base"
version = "0.1.0"
description = "Shared chassis for Conter internal apps: supervisor contract, auth, wiki, settings, design system."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "werkzeug>=3.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["conter_app_base*"]

[tool.setuptools.package-data]
conter_app_base = [
    "design/templates/**/*.html",
    "design/static/*.js",
    "design/static/*.css",
    "settings_ui/templates/**/*.html",
    "settings_ui/static/*.css",
    "auth_ui/templates/**/*.html",
]
