[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "central-server-app-foundation"
version = "0.1.0"
description = "Shared chassis for Conter internal apps: supervisor contract, auth, wiki, settings, design system."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "werkzeug>=3.0",
    "flask-babel>=4.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["central_server_app_foundation*"]

[tool.setuptools.package-data]
central_server_app_foundation = [
    "design/templates/**/*.html",
    "design/static/*.js",
    "design/static/*.css",
    "settings_ui/templates/**/*.html",
    "settings_ui/static/*.css",
    "auth_ui/templates/**/*.html",
    "i18n/translations/**/*.mo",
    "i18n/translations/**/*.po",
    "i18n/translations/*.pot",
    "i18n/babel.cfg",
]
